# CMakeList.txt : CMake project for Codeforces_Round_740_Div.2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Codeforces_Round_740_Div.2")

# Add source to this project's executable.
add_executable (Codeforces_Round_740_Div.2 "Codeforces_Round_740_Div.2.cpp" "Codeforces_Round_740_Div.2.h")

# TODO: Add tests and install targets if needed.
