# CMakeList.txt : CMake project for ccpc_online_pre, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ccpc_online_pre")

# Add source to this project's executable.
add_executable (ccpc_online_pre "F.cpp")

# TODO: Add tests and install targets if needed.
